# mohair-extension

./: .gitattributes  .gitmodules  README.md  buf.gen.yaml  pyproject.toml  write-substrait.py
mohair_extension/: extension.py  relations.py  test_dependencies.py
mohair_extension/mohair/: algebra_pb2.py
resources/: average-expression.substrait  average-expression.substrait.txt  projection.mohair.txt  sample-data.tsv
toolbox/: compile_mohair  read-substrait  substrait-from-protbuf-str  write-substrait
